--- a/www/index.html
+++ b/www/index.html
@@ -19,10 +19,11 @@
 	<link href="/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
+    <!-- #region navbar  -->
     <!-- Dropdown Structure -->
     <!-- Desktop -->
     <ul id="event-dropdown" class="dropdown-content">
-        <li><a href="#!">All</a></li>
+        <li><a href="events.html">All</a></li>
         <li><a href="#!">Music</a></li>
         <li><a href="#!">Theatre</a></li>
         <li><a href="#!">Opera</a></li>
@@ -31,7 +32,7 @@
     </ul>
     <!-- Mobile -->
     <ul id="mobile-event-dropdown" class="dropdown-content">
-        <li><a href="#!">All</a></li>
+        <li><a href="events.html">All</a></li>
         <li><a href="#!">Music</a></li>
         <li><a href="#!">Theatre</a></li>
         <li><a href="#!">Opera</a></li>
@@ -64,6 +65,8 @@
         </nav>
     </div>
 
+    <!-- #endregion  -->
+
     <div id="index-banner" class="parallax-container">
         <div class="section no-pad-bot">
             <div class="container">
@@ -77,11 +80,6 @@
             </div>
         </div>
     </div>
-
-
-            <!--     Icon Section     -->
-            <div id="books-showcase" class="row">
-            </div>
 
 
     <footer class="page-footer teal">
