Show event in calendar Show evetns by type

--- a/www/index.html
+++ b/www/index.html
@@ -24,20 +24,20 @@
     <!-- Desktop -->
     <ul id="event-dropdown" class="dropdown-content">
         <li><a href="/events.html">All</a></li>
-        <li><a href="#!">Music</a></li>
-        <li><a href="#!">Theatre</a></li>
-        <li><a href="#!">Opera</a></li>
-        <li><a href="#!">Dance</a></li>
-        <li><a href="#!">Seminar</a></li>
+        <li><a href="/events/bytype/Musical">Musical</a></li>
+        <li><a href="/events/bytype/Theatre">Theatre</a></li>
+        <li><a href="/events/bytype/Opera">Opera</a></li>
+        <li><a href="/events/bytype/Dance">Dance</a></li>
+        <li><a href="/events/bytype/Seminar">Seminar</a></li>
     </ul>
     <!-- Mobile -->
     <ul id="mobile-event-dropdown" class="dropdown-content">
-        <li><a href="events.html">All</a></li>
-        <li><a href="#!">Music</a></li>
-        <li><a href="#!">Theatre</a></li>
-        <li><a href="#!">Opera</a></li>
-        <li><a href="#!">Dance</a></li>
-        <li><a href="#!">Seminar</a></li>
+        <li><a href="/events.html">All</a></li>
+        <li><a href="/events/bytype/Musical">Musical</a></li>
+        <li><a href="/events/bytype/Theatre">Theatre</a></li>
+        <li><a href="/events/bytype/Opera">Opera</a></li>
+        <li><a href="/events/bytype/Dance">Dance</a></li>
+        <li><a href="/events/bytype/Seminar">Seminar</a></li>
     </ul>
 
     <div class="navbar-fixed">
